Redovisningstext for KMOM01 added

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -3,4 +3,12 @@
 Redovisning kmom01
 =========================
 
-Här kommer texten för redovisning 1.
+Jag hade innan kursmomentet ingen direkt erfarenhet av att jobba i ett liknande ramverk som anax för att bygga webbplatser. Dock visste jag att de fanns och vilken nytta man kan ha av dem. Att de fungerar som en sorts mall som man kan utgå från, och därmed inte behöver skapa allt från grunden. Men någon rent praktisk erfarenhet hade jag inte. Det innebar att kursmomentet innehöll en del som var nytt för mig, och det var lärorikt. Jag förstår att man som utvecklare bör lära sig ett antal ramverk då de kan förenkla arbetet väsentligt. Man behöver inte uppfinna hjulet igen utan kan utnyttja det någon gjort och fokusera på andra värdeskapande aktviteter.
+
+Jag var inte bekant med Composer eller Make. Det gick dock bra att följa instruktionerna för installationen utan några större bekymmer. Jag förstår också principen kring varför Make är bra att använda sig av i utvecklingsprojekt, då man kan samla ett antal kommandon i ett. Git har jag lite erfarenhet av, så jag kände igen kommandona och arbetsflödet. GitHub hade jag ett konto på och visste på ett ungefär hur det kunde användas. Det blev även klarare under kursmomentet. Jag hade ett problem när jag skulle pusha till repot första gången där jag fick meddelandet  ”Host key verification failed. fatal: Could not read from remote repository.” Det fanns en lösning på problemet på stackoverflow. Jag var tvungen att lägga till GitHub till listan av auktoriserade hosts. Efter jag implementerade det löstes problemet. Jag har även aktiverat SSH-nycklar så att processen med uppladdning mot det externa repot går smidigt.
+
+När det kommer till design och användbarhet för webben tror jag mycket på enkelhet. Stilen beror såklart på vad syftet med webbplatsen är, men man bör alltid göra det enkelt för användaren. Man måste kunna sätta sig in i användarens skor, och tänka ut hur man gör det så intuitivt som möjligt för den att navigera på sidan. Att skapa ett naturligt flöde. Min erfarenhet av att utveckla webbplatser är inte stor, och jag försöker att inte ha alltför mycket förutfattade meningar, utan vill vara öppen och mottaglig för att lära mig.
+
+Det kändes bra att styla sidan. Jag gick igenom webbplatsens sidor med inspektören i Firefox Developer Edition för att identifiera elementen jag ville styla. Sedan tog jag ut css-selektorerna till css-filen och lade till en lämplig style. I det första kursmomentet valde jag att inte göra alltför mycket, utan väntar med det till följande kursmoment. Nu är jag bekant med filstrukturen och vet hur jag ska hitta elementen, vilken känns som en bra början.
+
+Min TIL för kursmomentet är hur jag kan använda inspektören för att gå igenom webbplatsen och identifiera de olika elementen som bygger upp sidan. Jag förstår att den är användbar när man utvecklar, och viktig när det inte är en själv som skapat sidan från grunden. Överhuvudtaget är F12 Developer Tools något jag kommer använda mer. En annan TIL är git och GitHub, som jag hade lite erfarenhet av, men där min kunskap fördjupats. Nu har jag en relativt stor förståelse för grunderna och hur arbetsprocessen fungerar.
