Updated according to req of kmom04, colors

--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -3,4 +3,14 @@
 Redovisning kmom04
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
+Skrivuppgiften var intressant att utföra. Den innebar lite variation mot tidigare kmom vi gjort hittills i utbildningen. Jag tycker det var lärorikt att undersöka webbplatser och analysera dessa. Det finns en del man kan ta inspiration ifrån, och jag har även börjat märka hur jag själv ”analyserar” webbplatser jag besöker. Något som också observerade var att många sidor inte höll sig till ett strikt färgschema, utan hade någon typ av blandning. Monokromt verkade också väldigt vanligt, och jag föredrar själv när färgblandningen inte är för stor.
+
+Minimalistisk tolkade jag som en ren stil utan för mycket färger. Jag valde att använda mig av ett akromatiskt färgschema, med vitt, svart och ett par nyanser av grått. Då jag ville att sidan skulle fungera ungefär som en motsats till dark-temat valde jag att hålla det ljust. Det svarta använde jag på headern, mörkgråa på footern, och de övriga ljusgråa nyanserna fick fungera som bakgrundsfärger. För att få en sista touch använde jag en orange accentfärg för titlarna i navbaren och på länkarna. Jag ville ha en enkel font, och tyckte att fontFamilyHelveticaNeue uppfyllde syftet. Den användes på all text, med en svartgrå färg.
+
+Det färgglada temat hade jag ganska svårt för. Då jag ville ha en färgrik palett bestämde jag mig för ett triadiskt färgschema. Jag satt relativt länge och prövade många kombinationer, men det var utmanade att få det snyggt. Tillslut valde jag att gå ”all in” och körde ett 80-tals inspirerat tema, med olika nyanser av turkos, rosa och gult. Jag använde rosa färger på navbaren och footern, och turkosa på bodyn och inner-wrap:ern. Den gula färgen använde jag som border-färg. Någon accentfärg tyckte jag inte behövdes, då det fanns nog med färg som det var. Texten blev en nyans av vit med lagom stor kontrast. Jag förstorade upp den något, då det var svårt att läsa annars, och valde serif-fonten Times för mina headers för att ”spica” upp det en smula. För brödtexten använde jag fontFamilyMyriadPro, då jag tyckte att den hade bäst läsbarhet och såg ganska snygg ut.
+
+För det mörka temat körde jag på samma princip som det minimalistiska, men mörka färger. Jag använde ett akromatiskt färgschema, med vitt, svart och en knapp handfull nyanser av grått. Då det lätt kan bli för mörkt användes svart endast till headern. De gråa användes som bakgrundsfärger och för sidans borders. Jag valde att ta med en turkos accentfärg på länkarna och titlarna i navbaren. Då jag precis som i det minimalistiska temat ville ha en enkel och stilren font använde jag fontFamilyHelveticaNeue på all text, med en vitgrå färg.
+
+I kodstrukturen skapade jag ett less-dokument kallat kmom04, duplicerat från kmom03. Till detta skapade jag en ny layout-fil och en ny base-fil, duplicerade från tidigare kmom. Jag gjorde några mindre ändringar där jag bytte ut vissa hårdkodade värden mot variabler. Sedan importerade jag layout- och base-filen i kmom04 filen, och kommenterade bort de gamla. Därefter skapade jag var sin fil för varje tema, i vilka jag importerade kmom04-filen. Jag kunde slutligen i tema-filerna välja vilka värden som skulle sättas in på varje variabel.
+
+Jag lärde mig en hel del om färgsättning i kursmomenten. Färgscheman hade jag ingen kunskap om tidigare, och det var mycket som var nytt. Jag blev medveten om hur svårt det var att använda många färger och samtidigt få det att se professionellt ut. Monokroma sidor med mindre färgvariation är för mig enklare att göra. Jag tror även att de flesta sidor gynnas av att inte ha en alltför bred färgpalett. Om man ska använda många färger, som i triadiska färgscheman, bör de nog appliceras på särskilda sektioner, medan bakgrunden hålls relativt ljus. Det finns fortsatt mycket att lära, och det kommer nog bli bättre med mer träning.
