Updated according to kmom05, with redovisningstext

--- a/content/redovisning/05_kmom05.md
+++ b/content/redovisning/05_kmom05.md
@@ -3,4 +3,12 @@
 Redovisning kmom05
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/05_kmom05.md`.
+Undersökningen var intressant att utföra och kursmomentet innehöll mycket ny kunskap att ta till sig av. Jag har egentligen aldrig medvetet reflekterat kring laddningstid, mer än att man märkt av när en sida är riktigt långsam. Något som ibland bidragit till att man lämnat den. I min undersökning valde jag att titta närmare på webbplatser inom e-handel. De här företagens lönsamhet är helt beroende av att webbplatsen fungerar väl. Tar sidan för lång tid att ladda kommer kunderna lämna och se efter andra alternativ. Laddningstiden bör därmed ha otroligt hög prioritet. Troligtvis finns det utmaningar med att få fram en riktigt snabb sida, med tanke på den stora mängd på produktbilder. Bland undersökningens webbplatser fanns det en viss variation av laddningstid. Framförallt var det en som stack ut med att vara avsevärt sämre än de andra. Att den var så långsam, mer än tre gånger längre laddningstid än den snabbaste, förvånade mig något. Den fanns trots allt med på IDG:s lista över de bästa sajterna för 2019. De hade säkerligen kunnat höja lönsamheten för verksamheten om de investerat lite tid och pengar för att optimera sidan. Efter kursmomentet förstår jag att det inte bara handlar om att skapa en snygg och lättnavigerad sida, utan man måste även tänka på hur snabb den är. Det är ytterligare en parameter att ta med i ekvationen.
+
+Det var första gången jag använt ett bildverktyg för webben som CImage. Jag har egentligen inte mycket erfarenhet av bildbehandling sedan tidigare. De verktyg jag använt mig av då har varit de som funnits med bland grundprogrammen i datorn. Photoshop har jag använt vid något enstaka tillfälle. CImage var smidigt, och jag kan se mig använda det eller något liknande program i framtiden. Det var inga konstigheter med programmets features, och manualen var enkel att följa.
+
+Jag hade lite problem med @desinax/figure i början. I tidigare kursmoment hade jag redan deklarerat klassen ”right”. Jag fick därför ta bort den deklarationen och skapade ett nytt layout-stylesheet för kursmomentet. Markdown-språket gör också att strukturen inte blir lika tydlig och jag fick lite problem när jag skulle floata elementen med ”left” och ”right”-klasserna. Jag var tvungen att blanda in lite vanlig html för att skapa en div för varje presentationsalternativ, så att varje bild kunde hålla sig inom ett visst block. Annars floatade bilderna vid sidan av varandra och rubrikerna. Modulen i sig var okomplicerad och jag uppskattade framförallt den responsiva featuren. Den gjorde det enkelt att skapa responsivitet med bilder som hade text vid sidan av sig.
+
+Min inställning kring bilder på webben är att de ska användas på rätt sätt. Gör de inte det riskerar man att förlänga laddningstiden, vilket kan få allvarliga konsekvenser för verksamheten. Särskilt om lönsamheten för företaget är beroende av en snabb webbplats, som i fallet med e-handel. Responsivitet kring bilder ser jag som en självklarhet, då en så stor del av trafiken kommer från andra enheter än desktop. Något som jag tror kommer fortsätta öka. När det kommer till laddningstid på mobila enheter verkar det finnas en ganska stor förbättringspotential, åtminstone utifrån resultatet av undersökningen.
+
+Jag lärde mig mycket nytt under kursmomentet, i huvudsak om laddningstid och betydelsen av att tillhandahålla en snabb webbplats. Tidigare har jag inte funderat särskilt mycket kring det, och visste inte hur viktigt det var att optimera användningen av bilder. I undersökningen framkom även att det fanns en del som kunde förbättras. Det är något som jag tycker känns spännande.
