Updated according to kmom06

--- a/content/.meta.md
+++ b/content/.meta.md
@@ -4,5 +4,5 @@ views:
         region: flash
         template: anax/v2/image/default
         data:
-            src: "image/theme/asphalt_texture3727smnr2.jpg?width=1100&height=150&crop-to-fit"
+            src: "image/water.jpeg?width=1100&height=150&crop-to-fit&f=colorize,38,46,49,0"
 ---
