--- a/content/redovisning/06_kmom06.md
+++ b/content/redovisning/06_kmom06.md
@@ -2,5 +2,12 @@
 ---
 Redovisning kmom06
 =========================
+Att tänka i termer av designelement och designprinciper gör att man får en grund att luta sig mot. Design är ett lite mer luddigt koncept än kodning och även fast det är en kreativ process finns det vissa grunder som kan vara bra att hålla sig till. Det kan ge viss inspiration, men framförallt fungera som ett stöd. Jag tror att det är extra användbart i början när man är mer osäker på hur man ska tänka när det kommer till att skapa en god design. Det ger en vissa begrepp och principer att förhålla sig till, samtidigt väljer man själv vilka man vill lägga tyngdpunkt på och applicera. På så vis behöver det inte vara hämmande för kreativiteten. När man är mer erfaren och känner sig trygg i ”reglerna” är det möjligt att medvetet bryta mot dem. Men innan man gör det tror jag att man bör ha en god kännedom om dem och varför de finns.
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/06_kmom06.md`.
+Uppgiften ”utvärdera designprinciper som webbplatser använder sig av” var nyttig då den skapade en medvetenhet hos mig kring hur etablerade webbplatser arbetar med dem. Efter att ha lärt sig om teorin fick man möjlighet att relatera den till verkliga exempel. I fortsättningen kommer jag nog tänka mer i termer om designelement och designprinciper när jag besöker webbplatser.
+
+I arbetet med temana för designelement och designprinciper fick jag sedan själv applicera de teoretiska koncepten som gåtts igenom och utvärderats. Det var första gången jag själv designat med koncepten. Jag tycker att det gick rätt bra och det fick mig att reflektera mer kring vad de innebär, och hur man rent praktiskt kan arbeta med designelement och organisera dem med designprinciper. Även fast jag omedveten arbetat med designelement och designprinciper tidigare kändes det bra att ha någon typ av teori att relatera till. I fortsatta projekt kommer detta vara en del av designprocessen.
+
+”The final touch” är det sista som gör att webbplatsens design upplevs som komplett. Man brukar ofta säga att helheten sitter i detaljerna, och det tror jag starkt på. Om någon del är halvfärdig eller av låg kvalitet sänker det helhetsupplevelsen, oavsett vad det handlar om. Webbdesign är inget undantag. Ibland kan det också vara bra att vänta med vissa saker till slutet, då grunden är på plats och det finns ett sammanhang att utgå från. Alla brister är heller inte helt synliga förrän de kan relateras till en helhet.
+
+Liksom tidigare kursmoment fanns det mycket nytt att lära sig. Både designelement och designprinciper var nya begrepp för mig. Jag tror att jag kommer kunna ha stor nytta av att fortsätta lära mig om dessa och på så vis få en mer djuprotad kunskap om dem. Det blir ett ramverk att luta sig mot. När jag utvecklar webbplatser framöver kommer jag se tillbaka på begreppen och deras beståndsdelar för att stämma av hur sidan upplevs, och ta inspiration för vad som skulle kunna göras bättre. Det är min TIL för kursmomentet.
