--- a/content/blogg/.meta.md
+++ b/content/blogg/.meta.md
@@ -1,5 +1,10 @@
 ---
 views:
+    flash:
+        region: flash
+        template: anax/v2/image/default
+        data:
+            src: "image/1010e8923de1918ed49304462b5b41b3.jpg?width=1100&height=150&crop-to-fit"
     main:
         template: anax/v2/blog-post/default
         data:
@@ -13,7 +18,7 @@ views:
         template: anax/v2/byline/default
         sort: 2
         data:
-            meta: 
+            meta:
                 type: author
 
     next-previous:
@@ -21,7 +26,7 @@ views:
         template: anax/v2/next-previous/default
         sort: 3
         data:
-            meta: 
+            meta:
                 type: next-previous
                 orderby: publishTime
                 orderorder: desc
@@ -30,7 +35,7 @@ views:
         region: breadcrumb
         template: anax/v2/breadcrumb/default
         data:
-            meta: 
+            meta:
                 type: breadcrumb
 
     article-toc:
@@ -38,7 +43,7 @@ views:
         template: anax/v2/article-toc/default
         sort: 1
         data:
-            meta: 
+            meta:
                 type: article-toc
 
     block-about:
@@ -46,7 +51,7 @@ views:
         template: anax/v2/block/default
         sort: 0
         data:
-            meta: 
+            meta:
                 type: single
                 route: ./block-about
 ---
