--- a/content/redovisning/10_kmom10.md
+++ b/content/redovisning/10_kmom10.md
@@ -3,4 +3,26 @@
 Redovisning kmom10
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/10_kmom10.md`.
+###Uppgift 1
+I början hade jag lite utmaningar med att definiera själva uppgiften och i huvudsak vilken metod jag skulle använda mig av. Jag funderade först på om jag skulle utgå från någon artikel som beskriver nuvarande trender och sedan undersöka hur ett urval webbplatser använde dessa. Dock valde jag att ta en annan väg då jag ville använda mig av konkreta koncept vi nyttjat tidigare i kursen. Jag tog koncepten designprinciper och designelement, och analyserade fyra webbplatser inom kategorin ”delningstjänster” utifrån dem. Min tanke var att analysera dessa sidor för varje designprincip och designelement, för att på så vis synliggöra vad sidorna hade gemensamt. Designprinciperna och designelementen fungerade som ett ramverk att ta avstamp från för identifiera specifika trender. Jag använde sedan samma format som för tidigare rapporter jag skrivit i kursen.
+
+###Uppgift 2
+Minimalistisk webbdesign tilltalar mig och jag valde därför att göra en undersökning inom detta. Jag  utgick från en artikel som listade specifika principer inom minimalistisk design, och undersökte i vilken utsträckning dessa användes på webbplatserna. Anledningen var att jag ville pröva tillvägagångssättet som jag inte använde mig av i föregående uppgift. Efter att ha använt båda tycker jag att detta var det bästa. Metoden gjorde undersökningen mer ren och mindre omständlig än den jag använde i uppgift 1. Jag hittade först en artikel genom att googla, men upptäckte sedan att det fanns en i kursmaterialet, och tog därför den. Layouten för undersökningen var sedan i princip densamma som för tidigare rapporter jag gjort.
+
+###Uppgift 3
+Jag valde att först ta en kopia av min me/redovisa och lägga innehållet i me/proj. Därefter rensade jag ur bland sidorna och innehållet. På så vis fick jag en grund att bygga webbplatsen från och kunde samtidigt dra nytta av det arbete jag tidigare utfört. Jag bestämde mig för att arbeta med uppdraget för kund 1, konsultfirman, och valde att de arbetade med finansiell konsultverksamhet.  Jag designade en egen flashbild med hjälp av Canva, liksom en logotyp som används i headern och som favicon. Därefter skapade jag sidorna (Hem, Om och Blogg), vilka det länkas till i navbarerna, och lade till relevant info i footern. Informationen som syns på sidorna är inspirerad av andra företags webbplatser som jag besökt. Webbplatsen var i princip responsiv sedan tidigare, förutom footern, vilket jag åtgärdade. På om-sidan lade jag till information om kundens verksamhet och ett stycke om själva webbplatsen (min formulering och tolkning av kundens krav).
+
+###Uppgift 4
+Jag ville skapa ett tema som andades klassisk och diskret exklusivitet. Alltför många färger och för starka färger var inte aktuellt. Jag valde en komplementär färgsättning av tre relativt nedtonade färger, där mörkgrå/mörkblå utgjorde grundfärgen och kompletterade den med en mörkbrun och en ljusbrun/guldig färg. Den mörkgrå/mörkblå färgen utsöndrar en känsla av professionalism och känns även något lyxig. Det var dock först när jag applicerade den guldiga accentfärgen som sidan kändes komplett och den slutliga touchen av exklusivitet var på plats. Huvudtexten använde jag vit färg för då detta gav bäst läsbarhet. Jag valde att göra texten i sidebarsen något mindre kontrastfull än texten för huvudinnehållet, då denna mer finns i periferin och inte ska dra för stor uppmärksamhet. För att webbplatsen skulle ha starka associationer till affärsvärlden valde jag att använda en bakgrundsbild på ett höghus med glasfasad. Jag lade ner en del tid på att hitta en bild som någorlunda matchade webbplatsens färgsättning. Fonten för brödtexten ville jag hålla neutral och för god läsbarhet på webben valde jag en sans-serif font (Helvetica). För rubrikerna ville jag återknyta till den klassiska känslan för webbplatsen och valde en serif-font (Cambria).
+
+###Uppgift 5
+Det förra temat var av mörkare typ, och jag ville därför skapa ett tema med en ljusare färgsättning och en ljus bakgrundsbild. Valet föll på ett akromatiskt färgschema med gråa färger och vitt, och en brun accentfärg. Grått kändes bra då jag associerar det till kostymer och den bruna får mig i sammanhanget att tänka på träinteriörer, vilket känns gediget och vanligt förekommande i de miljöerna. Jag valde även att skapa lite mer perspektiv på webbplatsen genom att applicera subtila skuggeffekter på vissa element. Sidebarsen fick även en annan färgsättning och på så vis utgör de fyrkantiga former. Transparenta element användes även de i högre grad. Färgen på texten blev för det här temat svart, då det gav bäst läsbarhet mot den ljusa bakgrunden. Fonten blev serif för rubriker och sans-serif för brödtext, då jag vill uppnå god läsbarhet, samtidigt som jag ville att rubrikerna skulle kännas klassiska och eleganta. Jag ändrade slutligen layouten en aning, så att startsidan i detta temat endast har två kolumner, jämfört med tidigare två, och om- och blogg-sidorna endast har en, jämfört med att tidigare ha haft två.
+
+###Uppgift 6
+För att lösa uppgiften valde jag att skapa en struktur liknade den jag haft för tidigare rapporter. Jag gjorde en kort inledning som förklarade vad som finns på sidan. Därefter skapade jag en rubrik för varje innehållskrav som stod i instruktionen (Struktur av LESS-kod och moduler, moduler, Anpassning av tema till nya webbplatser och LESS som teknik). Jag läste därefter instruktionerna för varje krav och skrev svaret under motsvarande rubrik. Under första rubriken skrev jag om strukturen jag använt mig av och berättade om varför uppdelningen var lämplig. Under nästa rubrik gick jag igenom varje modul som mina två teman använde sig av. Därefter förklarade jag hur man kan göra för att använda och anpassa mina teman för att skapa nya webbplatser. Slutligen diskuterade jag fördelarna med LESS gentemot vanlig CSS och vad det innebär att arbeta med moduler. Till sist skapade jag en egen sida kallad ”dokument” och länkade till den i navbaren.
+
+###Allmänt om projektet
+Jag tycker att projektet gick bra att slutföra och stötte inte på några stora bekymmer. Det första projektet hade jag lite svårt att komma igång med, men när jag väl bestämt tillvägagångssättet flöt det på ganska bra. Det var dock den uppgiften som tog längst tid av samtliga. Den andra uppgiften var dock enklare då jag valt ett bättre tillvägagångssätt än för den första. Webbplatsen var oproblematisk att bygga upp och det tog inte så lång tid. Att skapa temat i uppgift 4 och 5 tog lite längre tid då jag ägnade en del uppmärksamhet åt detaljer. Det var framförallt att välja bakgrundsbilder som jag upplevde som svårt. Den sista uppgiften gick att slutföra utan några större svårigheter.
+
+###Allmänt om kursen
+Kursen har hållit en hög nivå och jag upplever att jag lärt mig mycket. Jag har inte arbetat med webbdesign tidigare och det var många begrepp och koncept som var obekanta. Materialet var omfattande och jag tycker att artiklarna och boken höll en hög nivå. Instruktionerna från läraren var enkla att följa. Jämfört med tidigare kurser upplevde jag att den var något mer tidskrävande, men det kan också bero på att jag inte hade någon tidigare erfarenhet av ämnet. Det tog också en del tid att sätta sig in i hur ramverket fungerade. Det var dock lärorikt och kunskapen kommer jag säkerligen ha nytta av när jag ska lära mig liknande ramverk i framtiden. Om jag skulle ge något förbättringsförslag hade det varit att använda ett ramverk som är mer vanligt förekommande på arbetsmarknaden, som exempelvis Bootstrap. Jag är oavsett nöjd och skulle kunna rekommendera kursen. Den får betyget 9 av 10.
